src/objects/ByPassTriggers__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Created for: Nokia Portugal COE | Trigger Logic Bypass</description>
    <fields>
        <fullName>AccountTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AccountTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH_Workgroup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CH_Workgroup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContactTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ContactTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EventTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_RegistrationTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event_RegistrationTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Registration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event_Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SessionTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SessionTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Session</label>
        <type>Checkbox</type>
    </fields>
    <label>ByPassTriggers</label>
</CustomObject>